carburetor-macro/tests/macro_tests/compile/fail/backend/duplicate_id.stderr
error[E0428]: the name `id` is defined multiple times
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | previous definition of the type `id` here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ `id` redefined here
  |
  = note: `id` must be defined only once in the type namespace of this module
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0252]: the name `id` is defined multiple times
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `id` reimported here
  |
  = note: `id` must be defined only once in the type namespace of this module
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0124]: field `id` is already declared
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:5
  |
3 | #[carburetor(table_name = "users")]
  | ----------------------------------- `id` first declared here
4 | pub struct User {
5 |     pub id: String,
  |     ^^^^^^^^^^^^^^ field already declared

error[E0124]: field `id` is already declared
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | field already declared
  | `id` first declared here
  |
  = note: this error originates in the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Debug` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `columns::id`
4 | pub struct User {
5 |     pub id: String,
  |         -- first implementation here

error[E0119]: conflicting implementations of trait `Clone` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `columns::id`
4 | pub struct User {
5 |     pub id: String,
  |         -- first implementation here

error[E0119]: conflicting implementations of trait `Copy` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `columns::id`
4 | pub struct User {
5 |     pub id: String,
  |         -- first implementation here

error[E0119]: conflicting implementations of trait `QueryId` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `columns::id`
4 | pub struct User {
5 |     pub id: String,
  |         -- first implementation here
  |
  = note: this error originates in the derive macro `diesel::query_builder::QueryId` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `std::default::Default` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `columns::id`
4 | pub struct User {
5 |     pub id: String,
  |         -- first implementation here

error[E0119]: conflicting implementations of trait `SelectableExpression<table>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `SelectableExpression<query_source::joins::Join<_, _, LeftOuter>>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: upstream crates may add a new impl of trait `diesel::query_builder::AsQuery` for type `diesel::query_source::joins::Join<_, _, diesel::query_source::joins::LeftOuter>` in future versions
  = note: upstream crates may add a new impl of trait `diesel::Table` for type `diesel::query_source::joins::Join<_, _, diesel::query_source::joins::LeftOuter>` in future versions
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `SelectableExpression<query_source::joins::Join<_, _, Inner>>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: upstream crates may add a new impl of trait `diesel::query_builder::AsQuery` for type `diesel::query_source::joins::Join<_, _, diesel::query_source::joins::Inner>` in future versions
  = note: upstream crates may add a new impl of trait `diesel::Table` for type `diesel::query_source::joins::Join<_, _, diesel::query_source::joins::Inner>` in future versions
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `SelectableExpression<JoinOn<_, _>>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: upstream crates may add a new impl of trait `diesel::query_builder::AsQuery` for type `diesel::query_source::joins::JoinOn<_, _>` in future versions
  = note: upstream crates may add a new impl of trait `diesel::Table` for type `diesel::query_source::joins::JoinOn<_, _>` in future versions
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `SelectableExpression<SelectStatement<FromClause<_>>>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: upstream crates may add a new impl of trait `diesel::Table` for type `diesel::query_builder::select_statement::SelectStatement<diesel::query_builder::from_clause::FromClause<_>>` in future versions
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `SelectableExpression<Only<table>>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `SelectableExpression<Tablesample<table, _>>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `QueryFragment<_>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `diesel::Expression` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `ValidGrouping<_>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `ValidGrouping<()>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: multiple `impl`s satisfying `_: MixedAggregates<diesel::expression::is_aggregate::No>` found in the `diesel` crate:
          - impl MixedAggregates<diesel::expression::is_aggregate::No> for diesel::expression::is_aggregate::No;
          - impl<T> MixedAggregates<T> for diesel::expression::is_aggregate::Never;
  = note: required for `(columns::id, columns::username, columns::email, columns::last_sync_at)` to implement `ValidGrouping<()>`
  = note: 1 redundant requirement hidden
  = note: required for `(columns::id, columns::id, columns::username, columns::email, columns::last_sync_at)` to implement `ValidGrouping<()>`
  = note: required for `SelectStatement<FromClause<table>>` to implement `Query`
note: required by a bound in `diesel::query_builder::AsQuery::Query`
 --> $CARGO/diesel-$VERSION/src/query_builder/mod.rs
  |
  |     type Query: Query<SqlType = Self::SqlType>;
  |                       ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AsQuery::Query`
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: multiple `impl`s satisfying `_: MixedAggregates<diesel::expression::is_aggregate::No>` found in the `diesel` crate:
          - impl MixedAggregates<diesel::expression::is_aggregate::No> for diesel::expression::is_aggregate::No;
          - impl<T> MixedAggregates<T> for diesel::expression::is_aggregate::Never;
  = note: required for `(columns::id, columns::username, columns::email, columns::last_sync_at)` to implement `ValidGrouping<()>`
  = note: 1 redundant requirement hidden
  = note: required for `(columns::id, columns::id, columns::username, columns::email, columns::last_sync_at)` to implement `ValidGrouping<()>`
note: required by a bound in `diesel::Table::AllColumns`
 --> $CARGO/diesel-$VERSION/src/query_source/mod.rs
  |
  |     type AllColumns: SelectableExpression<Self> + ValidGrouping<()>;
  |                                                   ^^^^^^^^^^^^^^^^^ required by this bound in `Table::AllColumns`
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `AppearsInFromClause<Only<table>>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `AppearsInFromClause<Tablesample<table, _>>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `AppearsOnTable<_>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `IsContainedInGroupBy<columns::id>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `IsContainedInGroupBy<columns::id>` for type `columns::username`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `columns::username`
  |
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `IsContainedInGroupBy<columns::username>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `IsContainedInGroupBy<columns::id>` for type `columns::email`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `columns::email`
  |
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `IsContainedInGroupBy<columns::email>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `IsContainedInGroupBy<columns::id>` for type `columns::last_sync_at`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `columns::last_sync_at`
  |
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `IsContainedInGroupBy<columns::last_sync_at>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | first implementation here
  | conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `Column` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0119]: conflicting implementations of trait `EqAll<_>` for type `columns::id`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | -----------------------------------
  | |
  | first implementation here
  | in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ conflicting implementation for `columns::id`
  |
  = note: this error originates in the macro `diesel::table` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: multiple `impl`s satisfying `String: FromSql<_, Pg>` found in the `diesel` crate:
          - impl FromSql<Citext, Pg> for String;
          - impl<ST, DB> FromSql<ST, DB> for String
            where DB: Backend, *const str: FromSql<ST, DB>, *const str: ?Sized;
  = note: required for `String` to implement `Queryable<_, Pg>`
  = note: required for `String` to implement `FromSqlRow<_, Pg>`
  = help: see issue #48214
  = note: this error originates in the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: multiple `impl`s satisfying `String: FromSql<_, Pg>` found in the `diesel` crate:
          - impl FromSql<Citext, Pg> for String;
          - impl<ST, DB> FromSql<ST, DB> for String
            where DB: Backend, *const str: FromSql<ST, DB>, *const str: ?Sized;
  = note: required for `String` to implement `Queryable<_, Pg>`
  = note: required for `String` to implement `FromSqlRow<_, Pg>`
  = note: this error originates in the derive macro `diesel::Selectable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:13
  |
3 | #[carburetor(table_name = "users")]
  | ----------------------------------- in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |             ^^^^^^ cannot infer type
  |
  = note: multiple `impl`s satisfying `String: FromSql<_, Pg>` found in the `diesel` crate:
          - impl FromSql<Citext, Pg> for String;
          - impl<ST, DB> FromSql<ST, DB> for String
            where DB: Backend, *const str: FromSql<ST, DB>, *const str: ?Sized;
  = note: required for `String` to implement `Queryable<_, Pg>`
  = note: required for `String` to implement `FromSqlRow<_, Pg>`
  = note: this error originates in the derive macro `diesel::Selectable` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
note: multiple `impl`s or `where` clauses satisfying `String: AsExpression<_>` found
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this attribute macro expansion
...
6 |     pub username: String,
  |         ^^^^^^^^
7 |     pub email: String,
  |         ^^^^^
  = note: and more `impl`s found in the following crates: `diesel`:
          - impl AsExpression<Citext> for String;
          - impl AsExpression<Nullable<Citext>> for String;
          - impl AsExpression<Nullable<diesel::sql_types::Text>> for String;
          - impl AsExpression<diesel::sql_types::Text> for String;
note: required for `User` to implement `Insertable<table>`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
4 | pub struct User {
  |            ^^^^
  = note: this error originates in the derive macro `diesel::Insertable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:4:12
  |
4 | pub struct User {
  |            ^^^^ cannot infer type
  |
note: multiple `impl`s or `where` clauses satisfying `String: AsExpression<_>` found
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this attribute macro expansion
...
6 |     pub username: String,
  |         ^^^^^^^^
7 |     pub email: String,
  |         ^^^^^
  = note: and more `impl`s found in the following crates: `diesel`:
          - impl AsExpression<Citext> for String;
          - impl AsExpression<Nullable<Citext>> for String;
          - impl AsExpression<Nullable<diesel::sql_types::Text>> for String;
          - impl AsExpression<diesel::sql_types::Text> for String;
note: required for `User` to implement `Insertable<table>`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
4 | pub struct User {
  |            ^^^^
  = note: this error originates in the derive macro `diesel::Insertable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
note: multiple `impl`s or `where` clauses satisfying `String: AsExpression<_>` found
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this attribute macro expansion
...
6 |     pub username: String,
  |         ^^^^^^^^
7 |     pub email: String,
  |         ^^^^^
  = note: and more `impl`s found in the following crates: `diesel`:
          - impl AsExpression<Citext> for String;
          - impl AsExpression<Nullable<Citext>> for String;
          - impl AsExpression<Nullable<diesel::sql_types::Text>> for String;
          - impl AsExpression<diesel::sql_types::Text> for String;
  = help: see issue #48214
  = note: this error originates in the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
note: multiple `impl`s or `where` clauses satisfying `String: AsExpression<_>` found
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this attribute macro expansion
...
6 |     pub username: String,
  |         ^^^^^^^^
7 |     pub email: String,
  |         ^^^^^
  = note: and more `impl`s found in the following crates: `diesel`:
          - impl AsExpression<Citext> for String;
          - impl AsExpression<Nullable<Citext>> for String;
          - impl AsExpression<Nullable<diesel::sql_types::Text>> for String;
          - impl AsExpression<diesel::sql_types::Text> for String;
  = note: this error originates in the derive macro `diesel::Insertable` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | ----------------------------------- in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ cannot infer type
  |
note: multiple `impl`s or `where` clauses satisfying `String: AsExpression<_>` found
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this attribute macro expansion
...
6 |     pub username: String,
  |         ^^^^^^^^
7 |     pub email: String,
  |         ^^^^^
  = note: and more `impl`s found in the following crates: `diesel`:
          - impl AsExpression<Citext> for String;
          - impl AsExpression<Nullable<Citext>> for String;
          - impl AsExpression<Nullable<diesel::sql_types::Text>> for String;
          - impl AsExpression<diesel::sql_types::Text> for String;
  = note: this error originates in the derive macro `diesel::Insertable` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
note: multiple `impl`s or `where` clauses satisfying `&String: AsExpression<_>` found
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this attribute macro expansion
...
6 |     pub username: String,
  |         ^^^^^^^^
7 |     pub email: String,
  |         ^^^^^
note: required for `&'insert User` to implement `Insertable<table>`
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
  = note: this error originates in the derive macro `diesel::Insertable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
note: multiple `impl`s or `where` clauses satisfying `&'insert String: AsExpression<_>` found
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this attribute macro expansion
...
6 |     pub username: String,
  |         ^^^^^^^^
7 |     pub email: String,
  |         ^^^^^
  = note: this error originates in the derive macro `diesel::Insertable` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | ----------------------------------- in this attribute macro expansion
4 | pub struct User {
5 |     pub id: String,
  |         ^^ cannot infer type
  |
note: multiple `impl`s or `where` clauses satisfying `&'insert String: AsExpression<_>` found
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this attribute macro expansion
...
6 |     pub username: String,
  |         ^^^^^^^^
7 |     pub email: String,
  |         ^^^^^
  = note: this error originates in the derive macro `diesel::Insertable` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0062]: field `id` specified more than once
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:5
  |
3 | #[carburetor(table_name = "users")]
  | ----------------------------------- first use of `id`
4 | pub struct User {
5 |     pub id: String,
  |     ^^^^^^^^^^^^^^ used more than once

error[E0062]: field `id` specified more than once
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:5:9
  |
3 | #[carburetor(table_name = "users")]
  | ----------------------------------- first use of `id`
4 | pub struct User {
5 |     pub id: String,
  |         ^^ used more than once

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
note: multiple `impl`s or `where` clauses satisfying `String: AsExpression<_>` found
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this attribute macro expansion
...
6 |     pub username: String,
  |         ^^^^^^^^
7 |     pub email: String,
  |         ^^^^^
  = note: and more `impl`s found in the following crates: `diesel`:
          - impl AsExpression<Citext> for String;
          - impl AsExpression<Nullable<Citext>> for String;
          - impl AsExpression<Nullable<diesel::sql_types::Text>> for String;
          - impl AsExpression<diesel::sql_types::Text> for String;
note: required by a bound in `diesel::ExpressionMethods::eq`
 --> $CARGO/diesel-$VERSION/src/expression_methods/global_expression_methods.rs
  |
  |     fn eq<T>(self, other: T) -> dsl::Eq<Self, T>
  |        -- required by a bound in this associated function
...
  |         T: AsExpression<Self::SqlType>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ExpressionMethods::eq`
  = note: this error originates in the derive macro `diesel::Insertable` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
note: multiple `impl`s or `where` clauses satisfying `&String: AsExpression<_>` found
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ in this attribute macro expansion
...
6 |     pub username: String,
  |         ^^^^^^^^
7 |     pub email: String,
  |         ^^^^^
note: required by a bound in `diesel::ExpressionMethods::eq`
 --> $CARGO/diesel-$VERSION/src/expression_methods/global_expression_methods.rs
  |
  |     fn eq<T>(self, other: T) -> dsl::Eq<Self, T>
  |        -- required by a bound in this associated function
...
  |         T: AsExpression<Self::SqlType>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ExpressionMethods::eq`
  = note: this error originates in the derive macro `diesel::Insertable` which comes from the expansion of the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | expected `&Option<String>`, found `&String`
  | arguments to this function are incorrect
  |
  = note: expected reference `&Option<String>`
             found reference `&String`
note: method defined here
 --> $RUST/core/src/clone.rs
  |
  |     fn clone(&self) -> Self;
  |        ^^^^^

error[E0062]: field `id` specified more than once
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | used more than once
  | first use of `id`

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: multiple `impl`s satisfying `_: MixedAggregates<diesel::expression::is_aggregate::No>` found in the `diesel` crate:
          - impl MixedAggregates<diesel::expression::is_aggregate::No> for diesel::expression::is_aggregate::No;
          - impl<T> MixedAggregates<T> for diesel::expression::is_aggregate::Never;
  = note: required for `(columns::id, columns::username, columns::email, columns::last_sync_at)` to implement `ValidGrouping<()>`
  = note: 2 redundant requirements hidden
  = note: required for `diesel::expression::select_by::SelectBy<User, Pg>` to implement `ValidGrouping<()>`
  = note: required for `SelectStatement<FromClause<table>>` to implement `SelectDsl<diesel::expression::select_by::SelectBy<User, Pg>>`
  = note: this error originates in the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/macro_tests/compile/fail/backend/duplicate_id.rs:3:1
  |
3 | #[carburetor(table_name = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: multiple `impl`s satisfying `String: FromSql<_, Pg>` found in the `diesel` crate:
          - impl FromSql<Citext, Pg> for String;
          - impl<ST, DB> FromSql<ST, DB> for String
            where DB: Backend, *const str: FromSql<ST, DB>, *const str: ?Sized;
  = note: required for `String` to implement `Queryable<_, Pg>`
  = note: required for `String` to implement `FromSqlRow<_, Pg>`
  = note: required for `(String, String, String, String, DateTime<Utc>)` to implement `FromStaticSqlRow<(_, _, diesel::sql_types::Text, diesel::sql_types::Text, diesel::sql_types::Timestamptz), Pg>`
  = note: 2 redundant requirements hidden
  = note: required for `User` to implement `FromSqlRow<(_, _, diesel::sql_types::Text, diesel::sql_types::Text, diesel::sql_types::Timestamptz), Pg>`
  = note: required for `diesel::expression::select_by::SelectBy<User, Pg>` to implement `load_dsl::private::CompatibleType<User, Pg>`
  = note: required for `BoxedSelectStatement<'_, diesel::expression::select_by::SelectBy<User, Pg>, FromClause<table>, Pg>` to implement `LoadQuery<'_, PgConnection, User>`
note: required by a bound in `diesel::RunQueryDsl::load`
 --> $CARGO/diesel-$VERSION/src/query_dsl/mod.rs
  |
  |     fn load<'query, U>(self, conn: &mut Conn) -> QueryResult<Vec<U>>
  |        ---- required by a bound in this associated function
  |     where
  |         Self: LoadQuery<'query, Conn, U>,
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::load`
  = note: this error originates in the attribute macro `carburetor` (in Nightly builds, run with -Z macro-backtrace for more info)
